TMA article, caption/image cleanup

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ description: My Blog.
 {% for post in site.posts %}
   <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   <h3>{{post.date | date_to_string}}</h3>
-  <img src="{{ post.image }}" alt="{{ post.title }}" class="center-image">
+  <img src="{{ post.image }}" alt="{{ post.title }}">
   <p>{{ post.excerpt }}</p>
   <br>
 {% endfor %}
