--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,13 @@ description: My Blog.
 {% for post in site.posts %}
   <div class="blog-preview">
     <div class="blog-header">
-      <a href="{{post.url}}" class="blog-link">
+      <a
+        href="{{post.url}}"
+        class="blog-link"
+        {% if post['disable-boost'] %}
+          hx-boost="false"
+        {% endif %}
+      >
         <h1 class="blog-title">
           {{ post.title }}
         </h1>
