--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,11 @@
 layout: default
 title: Blog
 title_override: Blog
-image: /assets/media/blog.png
+image: /assets/media/main-page/golden_gate.webp
+image_width: 800
+image_height: 469
 description: My Blog.
+keywords: blog, software engineering, mathematics, Navy, submarines, machine learning, data science, personal projects
 pagination:
   enabled: true
 ---
