--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ title_override: Blog
 image: /assets/media/main-page/golden_gate.webp
 image_width: 800
 image_height: 469
-description: My Blog.
+description: Carl Kolon's blog about software engineering, math, AI, and the Navy.
 keywords: blog, software engineering, mathematics, Navy, submarines, machine learning, data science, personal projects
 pagination:
   enabled: true
